2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Hungarian audio voices by
	Miklos Merenyi & Margareta Merenyi Released under GPL.
	Updated web site screenshots.
	Aplyed patch from Yann Dirson for Python detection.
	
	* boards/Makefile.am:
	* boards/colors.xml.in:
	* boards/sounds/Makefile.am:
	* boards/sounds/hu/.cvsignore:
	* boards/sounds/hu/Makefile.am:
	* boards/sounds/hu/alphabet/.cvsignore:
	* boards/sounds/hu/alphabet/10.ogg:
	* boards/sounds/hu/alphabet/11.ogg:
	* boards/sounds/hu/alphabet/12.ogg:
	* boards/sounds/hu/alphabet/13.ogg:
	* boards/sounds/hu/alphabet/14.ogg:
	* boards/sounds/hu/alphabet/15.ogg:
	* boards/sounds/hu/alphabet/16.ogg:
	* boards/sounds/hu/alphabet/17.ogg:
	* boards/sounds/hu/alphabet/18.ogg:
	* boards/sounds/hu/alphabet/19.ogg:
	* boards/sounds/hu/alphabet/20.ogg:
	* boards/sounds/hu/alphabet/Makefile.am:
	* boards/sounds/hu/alphabet/U0031.ogg:
	* boards/sounds/hu/alphabet/U0032.ogg:
	* boards/sounds/hu/alphabet/U0033.ogg:
	* boards/sounds/hu/alphabet/U0034.ogg:
	* boards/sounds/hu/alphabet/U0035.ogg:
	* boards/sounds/hu/alphabet/U0036.ogg:
	* boards/sounds/hu/alphabet/U0037.ogg:
	* boards/sounds/hu/alphabet/U0038.ogg:
	* boards/sounds/hu/alphabet/U0039.ogg:
	* boards/sounds/hu/alphabet/gcompris_alphabet_hu.assetml.in:
	* boards/sounds/hu/colors/.cvsignore:
	* boards/sounds/hu/colors/Makefile.am:
	* boards/sounds/hu/colors/black.ogg:
	* boards/sounds/hu/colors/blue.ogg:
	* boards/sounds/hu/colors/brown.ogg:
	* boards/sounds/hu/colors/gcompris_colors_hu.assetml.in:
	* boards/sounds/hu/colors/green.ogg:
	* boards/sounds/hu/colors/grey.ogg:
	* boards/sounds/hu/colors/orange.ogg:
	* boards/sounds/hu/colors/pink.ogg:
	* boards/sounds/hu/colors/purple.ogg:
	* boards/sounds/hu/colors/red.ogg:
	* boards/sounds/hu/colors/white.ogg:
	* boards/sounds/hu/colors/yellow.ogg:
	* boards/sounds/hu/geography/.cvsignore:
	* boards/sounds/hu/geography/Makefile.am:
	* boards/sounds/hu/geography/alaska.ogg: