@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<GCompris>
+  <Board
+        name="electric"
+        type="python:electric"
+        section="/"
+        icon="boardicons/python.png"
+        difficulty="0"
+        author="Bruno Coudoin (bruno.coudoin@free.fr)"
+        boarddir="">
+        <_title>Electric</_title>
+        <_description>Create and simulate electric schema</_description>
+        <_prerequisite></_prerequisite>
+        <_goal></_goal>
+        <_credit></_credit>
+  </Board>
+  <Data directory=""/>
+</GCompris>
