@@ -1,5 +1,11 @@
 2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	Started the electric activiry. Nothing runs yet.
+
+	* boards/electric.xml.in:
+
+2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	Added Hungarian audio voices by
 	Miklos Merenyi & Margareta Merenyi Released under GPL.
 	Updated web site screenshots.
